--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -4,7 +4,7 @@
     <string name="add_user">Add user</string>
     <string name="direction">Direction</string>
     <string name="add_button">Add</string>
-    <string name="license_plate">License plate</string>
+    <string name="ram">License plate</string>
     <string name="surname">Surname</string>
     <string name="name">Name</string>
     <string name="brand">Brand</string>
