textos traducidos al inglés

--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -2,9 +2,9 @@
 <resources>
     <string name="app_name">Toplaptop</string>
     <string name="add_user">Add user</string>
-    <string name="direction">Direction</string>
+    <string name="direction">Location</string>
     <string name="add_button">Add</string>
-    <string name="ram">License plate</string>
+    <string name="ram">RAM</string>
     <string name="surname">Surname</string>
     <string name="name">Name</string>
     <string name="brand">Brand</string>
@@ -12,27 +12,27 @@
     <string name="user_capital">USER</string>
     <string name="computer_capital">COMPUTER</string>
     <string name="order_capital">ORDER</string>
-    <string name="dni">DNI</string>
-    <string name="no_vip">Is not VIP</string>
+    <string name="dni">Personal ID</string>
+    <string name="no_vip">Not VIP</string>
     <string name="description">Description</string>
     <string name="date">Date</string>
     <string name="user">User</string>
     <string name="computer">Computer</string>
     <string name="google_maps_key">AIzaSyAS-E1TdrFb9UU_Su4gaT7ZPcbypCwUsCE</string>
-    <string name="vip">Is VIP</string>
+    <string name="vip">VIP</string>
     <string name="modify_capital">MODIFY</string>
-    <string name="are_you_sure_delete_order">Are you sure you want to delete the order forever?</string>
+    <string name="are_you_sure_delete_order">Are you sure you want to delete the order?</string>
     <string name="yes_capital">YES</string>
     <string name="no_capital">NO</string>
-    <string name="are_you_sure_delete_user">Are you sure you want to delete the user forever?</string>
-    <string name="are_you_sure_delete_computer">Are you sure you want to delete the computer forever?</string>
-    <string name="added_order">Added order</string>
-    <string name="modified_order">Modified order</string>
+    <string name="are_you_sure_delete_user">Are you sure you want to delete this user?</string>
+    <string name="are_you_sure_delete_computer">Are you sure you want to delete this computer?</string>
+    <string name="added_order">Order added</string>
+    <string name="modified_order">Order Modified</string>
     <string name="complete_all_fields">Complete all the fields</string>
     <string name="select_computer">Select a computer</string>
-    <string name="added_user">Added user</string>
+    <string name="added_user">User added</string>
     <string name="modified_user">Modified user</string>
-    <string name="select_map_position">Select a position on the map</string>
-    <string name="added_computer">Moto añadida</string>
-    <string name="modified_computer">Moto modificada</string>
+    <string name="select_map_position">Select a location on the map</string>
+    <string name="added_computer">Computer added</string>
+    <string name="modified_computer">Computer modified</string>
 </resources>
