--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,37 +1,37 @@
 <resources>
     <string name="app_name">Toplaptop</string>
-    <string name="add_user">Añadir usuario</string>
-    <string name="direction">Dirección</string>
-    <string name="add_button">Añadir</string>
-    <string name="ram">Ram</string>
-    <string name="surname">Apellido</string>
-    <string name="name">Nombre</string>
-    <string name="brand">Marca</string>
-    <string name="model">Modelo</string>
-    <string name="user">Usuario</string>
-    <string name="user_capital">USUARIO</string>
-    <string name="computer_capital">ORDENADOR</string>
-    <string name="order_capital">ORDEN</string>
-    <string name="dni">DNI</string>
-    <string name="no_vip">No es VIP</string>
-    <string name="vip">Es VIP</string>
-    <string name="description">Descripción</string>
-    <string name="date">Fecha</string>
-    <string name="computer">Ordenador</string>
-    <string name="modify_capital">MODIFICAR</string>
+    <string name="add_user">Add user</string>
+    <string name="direction">Location</string>
+    <string name="add_button">Add</string>
+    <string name="ram">RAM</string>
+    <string name="surname">Surname</string>
+    <string name="name">Name</string>
+    <string name="brand">Brand</string>
+    <string name="model">Model</string>
+    <string name="user_capital">USER</string>
+    <string name="computer_capital">COMPUTER</string>
+    <string name="order_capital">ORDER</string>
+    <string name="dni">Personal ID</string>
+    <string name="no_vip">Not VIP</string>
+    <string name="description">Component</string>
+    <string name="date">Date</string>
+    <string name="user">User</string>
+    <string name="computer">Computer</string>
     <string name="google_maps_key">AIzaSyAS-E1TdrFb9UU_Su4gaT7ZPcbypCwUsCE</string>
-    <string name="are_you_sure_delete_order">¿Estás seguro de eliminar la orden para siempre?</string>
-    <string name="yes_capital">SI</string>
+    <string name="vip">VIP</string>
+    <string name="modify_capital">MODIFY</string>
+    <string name="are_you_sure_delete_order">Are you sure you want to delete the order?</string>
+    <string name="yes_capital">YES</string>
     <string name="no_capital">NO</string>
-    <string name="are_you_sure_delete_user">¿Estás seguro de eliminar el usuario para siempre?</string>
-    <string name="are_you_sure_delete_computer">¿Estás seguro de eliminar el ordenador para siempre?</string>
-    <string name="added_order">Orden añadida</string>
-    <string name="modified_order">Orden modificada</string>
-    <string name="complete_all_fields">Completa todos los campos</string>
-    <string name="select_computer">Selecciona un ordenador</string>
-    <string name="added_user">Usuario añadido</string>
-    <string name="modified_user">Usuario modificado</string>
-    <string name="select_map_position">Selecciona una posición en el mapa</string>
-    <string name="added_computer">Ordenador añadido</string>
-    <string name="modified_computer">Ordenador modificado</string>
+    <string name="are_you_sure_delete_user">Are you sure you want to delete this user?</string>
+    <string name="are_you_sure_delete_computer">Are you sure you want to delete this computer?</string>
+    <string name="added_order">Order added</string>
+    <string name="modified_order">Order Modified</string>
+    <string name="complete_all_fields">Complete all the fields</string>
+    <string name="select_computer">Select a computer</string>
+    <string name="added_user">User added</string>
+    <string name="modified_user">Modified user</string>
+    <string name="select_map_position">Select a location on the map</string>
+    <string name="added_computer">Computer added</string>
+    <string name="modified_computer">Computer modified</string>
 </resources>
